--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,17 +45,17 @@ const visiblePages = pages.filter((page: Page) => page.show !== false && page.sh
 				</div>
 			</header>
 			<main class="lg:mx-10 md:mx-56 sm:mx-32 xs:mx-6 mx-4 h-1/2 lg:flex gap-4 pb-5">
-				{visiblePages.map(({ image, imagealt, slug, title }: { image: string; imagealt: string; slug: string; title: string }) => (
+				{visiblePages.map(({ image, imagealt, slug, title }: { image: { _type: string; alt: string; asset: any }; imagealt: string; slug: string; title: string }) => (
 					<a
 						href={slug}
 						class="bg-green-100 hover:bg-green-200 hover:-translate-y-1 hover:shadow-lg ring-1 ring-opacity-20 ring-black transition rounded-2xl p-3 flex flex-col mb-6 lg:mb-0 pb-2"
 					>
 						<Image
-							src={urlFor(image).format("webp").url()}
-							alt={imagealt}
-							class="rounded-xl mb-2 object-cover w-full flex-grow"
-							width="500"
-							height="500"
+							src={urlFor(image.asset).format("webp").url()} // Use image.asset here
+						alt={imagealt}
+						class="rounded-xl mb-2 object-cover w-full flex-grow"
+						width="500"
+						height="500"
 						/>
 						<h2 class="text-2xl sm:text-3xl font-semibold whitespace-pre-line ml-0.5 pb-2">{title}</h2>
 					</a>
