--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,14 +20,6 @@ const fetchData = async (type: string, fields: string) => {
 	return result as FetchDataResult[];
 };
 
-interface PageData {
-	title: string;
-	slug: string;
-	image: string; // Adjust the type if needed
-	imagealt: string;
-	show: boolean | null;
-}
-
 const home: FetchDataResult[] = await fetchData("home", `"title" : title, "lefttext": lefttext, "righttext": righttext, "image": bgimg, "imagealt": bgimg.alt`);
 const pages: FetchDataResult[] = await fetchData("pages", `"title" : title, "slug": slug.current, "image": img, "imagealt": img.alt, "show": showonhome`);
 
@@ -35,11 +27,9 @@ function urlFor(source: string) {
 	return builder.image(source);
 }
 
-interface Page {
-	show: boolean | null;
-}
-
-const visiblePages = pages.filter((page: PageData) => page.show !== false && page.show !== null);
+const visiblePages = pages.filter((page: FetchDataResult) => {
+	return page.show !== false && page.show !== null;
+});
 ---
 <Layout title={home[0]["title"]}>
 	<div class="h-screen sm:min-h-[40rem] min-h-[55rem]">
@@ -53,7 +43,7 @@ const visiblePages = pages.filter((page: PageData) => page.show !== false && pag
 				</div>
 			</header>
 			<main class="lg:mx-10 md:mx-56 sm:mx-32 xs:mx-6 mx-4 h-1/2 lg:flex gap-4 pb-5">
-				{visiblePages.map(({ image, imagealt, slug, title }: { image: { _type: string; alt: string; asset: any }; imagealt: string; slug: string; title: string }) => (
+				{visiblePages.map(({ image, imagealt, slug, title }) => (
 					<a
 						href={slug}
 						class="bg-green-100 hover:bg-green-200 hover:-translate-y-1 hover:shadow-lg ring-1 ring-opacity-20 ring-black transition rounded-2xl p-3 flex flex-col mb-6 lg:mb-0 pb-2"
@@ -61,7 +51,7 @@ const visiblePages = pages.filter((page: PageData) => page.show !== false && pag
 						<Image
 							src={urlFor(image.asset).format("webp").url()}
 							alt={imagealt}
-							class="rounded-xl mb-2 object-cover w-full flex-grow" // Note: Use className instead of class
+							class="rounded-xl mb-2 object-cover w-full flex-grow"
 						width={500}
 						height={500}
 						/>
